# beemanager

./: .gitignore  MANIFEST.in  README.md  burst.py  pyproject.toml  pytest.ini  serve.bash  takepic.py  takepics.bash  test-deploy-locally.sh  test_burst.py  test_django_hello.py
.github/: TESTING.md  copilot-config.json  copilot-instructions.md
.github/workflows/: deploy.yml  django-web.yml  test.yml
burst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/: __init__.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: add_note.html  base.html  create_hive.html  hive_detail.html  hive_list.html  home.html
devtests/: HiveManagementTests.cs
devtests/src/BeesMainPage/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
devtests/src/BeesMainPage/Pages/Shared/: _Layout.cshtml
devtests/src/BeesMainPage/Properties/: launchSettings.json
django_project/: __init__.py  settings.py  urls.py
tests/: test_burst.py  test_dummy.py  test_instructions_validation.py  test_serve_script.py
web_tests/: __init__.py  conftest.py  test_django_hello.py  test_hive_list.py  test_hive_models.py  test_hive_views.py
