[project]
name = "burst"
version = "0.1.0"
description = "Bee management tools with Django web interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["django_project", "core"]
py-modules = ["burst", "manage"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests", "web_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
